# AI-on-the-edge-device

./: .gitignore  .gitmodules  README.md
.github/workflows/: build.yaml  publish-pages-manifest.yaml
code/: partitions.csv  platformio.ini  sdkconfig.esp32cam-minflash-ota-pinned-no-mdns.defaults  sdkconfig.esp32cam-minflash-ota-pinned.defaults  sdkconfig.esp32cam.defaults
code/components/jomjol_controlcamera/: ClassControllCamera.cpp  last_jpeg_cache.cpp  last_jpeg_cache.h  server_camera.cpp
code/components/jomjol_fileserver_ota/: CMakeLists.txt  Kconfig  ota_ca_pem.h  server_file.cpp  server_file.h  server_help.cpp  server_ota.cpp  server_ota.h
code/components/jomjol_flowcontroll/: ClassFlow.cpp  ClassFlow.h  ClassFlowAlignment.cpp  ClassFlowCNNGeneral.cpp  ClassFlowControll.cpp  ClassFlowImage.cpp  ClassFlowMQTT.cpp  (+6 more)
code/include/: defines.h
code/main/: CMakeLists.txt  main.cpp  server_main.cpp  softAP.cpp  softAP.h  ui_embedded.cpp  ui_embedded.h  version.h
code/test/: test_suite_flowcontroll.cpp
docs/rfcs/: 0001-signed-manifest-ed25519.md  0002-ota-rollback-safe-mode.md  0003-streaming-ota-to-partition.md  0004-partition-recovery-layout.md  0005-resumable-downloads-cache.md
neo/: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32cam-neo
neo/main/: main.cpp
sd-card/html/: data.html  edit_alignment.html  edit_analog.html  edit_config_raw.html  edit_config_template.html  edit_digits.html  edit_reference.html  index.html  ota_page.html  overview.html  timezones.html
tools/github-pages/: generate_manifest.py
(+28 files in other folders)
